web/css/root.css
:root {
  --main-bg-color: white;
  --main-font-color: black;
  --main-border-radius: 3px;
  --main-font-family: 'Open Sans', sans-serif;
  --second-bg-color: black;
  --second-font-color: white;
  --second-font-family: 'Zilla Slab', serif;
  --active-font-color: red;
  --deactive-color: #d7d7db;
  --grey-color: #d7d7db;
  --dark-grey-color: #5e5c5b;
  --warning-color: #ff4f5e;
  --review-selected-color: #000000;
  --review-unselected-color: #ffffff;
  --base-font-size: 19px;
  --light-border-color: #efefef;
  --header-height: 65px;
  --footer-height: 60px;
  --footer-margin-top: 1.5rem;
}

html {
  font-family: var(--main-font-family);
  font-size: var(--base-font-size);
  color: var(--main-font-color);
}

body {
  margin: 0;
  box-sizing: border-box;
}

input,
textarea,
button,
select {
  font-family: var(--main-font-family);
  font-size: 0.8rem;
}

h1,
h2,
h3,
h4 {
  font-family: var(--second-font-family);
  margin: 0.5em 0;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.6rem;
}

h3 {
  font-size: 1.2rem;
}

h4 {
  font-size: 1rem;
}

a {
  color: inherit;
}

input {
  border-radius: var(--main-border-radius);
  border: 1px solid #959595;
  padding: 0.2rem;
}

.button,
button {
  transition: background-color 300ms, border-color 300ms, color 300ms;
  background-color: var(--main-bg-color);
  border: 2px solid var(--second-bg-color);
  color: var(--main-font-color);
  cursor: pointer;
  font-weight: bold;
  padding: 0.5rem 1rem;
  text-decoration: none;
  text-align: center;
  border-radius: 50px;
}

.button:disabled,
button:disabled {
  background-color: var(--deactive-color);
  border-color: var(--deactive-color);
  box-shadow: none;
}

.button:not(:disabled):hover,
.button:not(:disabled):active,
button:not(:disabled):hover,
button:not(:disabled):active {
  background-color: var(--second-bg-color);
  color: var(--second-font-color);
}

.button:not(:disabled):active,
button:not(:disabled):active {
  box-shadow: none;
}

.button.secondary,
button.secondary {
  background-color: var(--main-bg-color);
  border-color: var(--light-border-color);
  color: var(--main-font-color);
  margin: 0.5rem;
  padding: 0.2rem 1rem;
}

.button.secondary:hover,
.button.secondary:active,
button.secondary:hover,
button.secondary:active {
  background-color: var(--main-bg-color);
  border-color: var(--second-bg-color);
  color: var(--main-font-color);
}

select {
  padding: 0.2rem 0;
}

#root {
  margin: 0 auto;
  position: relative;
  min-height: 100vh;
}

main {
  max-width: 85vw;
  margin: 0 auto;
  padding-bottom: calc(var(--footer-height) + var(--footer-margin-top) + 50px);
}

form section {
  padding: 0.4rem 0;
}

form label {
  display: inline-block;
  font-weight: bold;
  margin-bottom: 0.3rem;
}

form input[type="checkbox"] {
  vertical-align: middle;
  position: relative;
  bottom: 1px;
  margin: 0 10px 0 0;
}

form input[type="password"],
form input[type="text"] {
  width: 100%;
  margin-bottom: 0.5rem;
}

form button:not(.standalone) {
  margin: 0.5rem;
  display: inline-block;
}

.form-message {
  line-height: 1rem;
  text-align: center;
  font-weight: bold;
}

.form-error {
  line-height: 1rem;
  color: var(--warning-color);
  text-align: center;
  font-weight: bold;
}

.loading-text {
  display: inline-block;
  font-size: 80%;
  font-weight: 800;
  width: 40%;
}

.no-bullets {
  list-style: none;
  margin-left: 0;
  padding-left: 0;
}

.error-message {
  color: red;
}

.small {
  font-size: 0.7rem;
}

